<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        style="@style/Text.Header"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/amber_700"
        android:id="@+id/tv_header_paper"
        android:text="@string/header_paper"/>

    <TextView
        style="@style/Text.Header"
        app:layout_constraintTop_toBottomOf="@id/tv_header_paper"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/light_green_500"
        android:id="@+id/tv_header_scissors"
        android:text="@string/header_scissors"/>

    <TextView
        style="@style/Text.Header"
        app:layout_constraintTop_toBottomOf="@id/tv_header_scissors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/purple_300"
        android:id="@+id/tv_header_rock"
        android:text="@string/header_rock"/>

    <FrameLayout
        android:id="@+id/fl_replay_button"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintDimensionRatio="0.5:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        
        <ImageView
            style="@style/Base.Icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_refresh"
            android:contentDescription="@string/replay_button_description" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>